--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -9,6 +9,7 @@ pipeline {
   stages {
     stage('Build') {
       steps {
+        sh 'npm config set registry https://registry.npm.taobao.org'
         sh 'npm install'
       }
     }
